// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Snapshot Tests should match snapshot with URL 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "height": 65,
          "width": 65,
        },
        {
          "borderRadius": 0,
        },
        undefined,
      ]
    }
    testID="lazy-image"
  >
    <Image
      source={
        {
          "uri": "https://example.com/avatar.jpg",
        }
      }
      testID="avatar-image"
    />
  </View>
</View>
`;

exports[`Avatar Snapshot Tests should match snapshot with all props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "height": 90,
          "width": 90,
        },
        {
          "borderRadius": 45,
          "overflow": "hidden",
        },
        undefined,
      ]
    }
    testID="lazy-image"
  >
    <Image
      source={
        {
          "uri": "https://example.com/avatar.jpg",
        }
      }
      testID="avatar-image"
    />
  </View>
</View>
`;

exports[`Avatar Snapshot Tests should match snapshot with initials 1`] = `
<View
  position="relative"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": undefined,
        "borderRadius": 0,
        "height": 65,
        "justifyContent": "center",
        "opacity": 1,
        "width": 65,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#1D2667",
            "fontFamily": "System-Bold",
            "fontSize": 16,
          },
          false,
          undefined,
        ]
      }
    >
      JS
    </Text>
  </View>
</View>
`;
